--- a/my_webstie_2.html
+++ b/my_webstie_2.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Welcome Welcome!</h1>
-            <p>This website is solely made with html because of that it may look a little bit ugly</p>
+            <p>This website is solely made with html because of that it may look a little bit ugly or beautiful depends what one prefers.</p>
         <h2>232754IAAB</h2>
         <p>^^^^^^^^^^^^^^^^^</p>
             <h2>Konversiooni tabel (0-5)</h2>
